--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -9,3 +9,16 @@
     </form>
   </li>
 <% end %>
+
+<h3> Create Team </h3>
+
+<form action="/team/create" method="post">
+  <input type="text" name="teamname" placeholder="teamname">
+  <% @user.each do |p| %>
+    <% if p != current_user %>
+      <%= p.email %> = <%= check_box_tag('user_ids[]', p.id) %><br />
+    <% end %>
+  <% end %>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+  <input type="submit">
+</form>
